--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 
 #scrollable {
 	overflow-y: scroll;
-	height: 80%;
+	height: 90%;
 	padding-left: 5px;
 }
 
@@ -111,6 +111,10 @@ li {
     overflow-y: unset;
   }
   #q{
+    display: none;
+  }
+  @page { size: auto;  margin: 0mm; }
+  title{
     display: none;
   }
   a[href]:after {
