--- a/matrix_style.css
+++ b/matrix_style.css
@@ -1,11 +1,5 @@
-* {
-    background: transparent;
-    color: black;
-    filter: none;
-	-ms-filter: none;
-}
-
 body {
+	background-color: #000000;
 	font-family: monospace;
 }
 
@@ -18,36 +12,51 @@ body {
 	margin: 0
 }
 
+#q {
+	background-color: #000;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: -100
+}
+
 #middleBox {
 	z-index: 100;
+	background: rgba(35, 77, 36, 0.787);
 	margin: auto;
 	width: 50%;
 	height: 90%;
 	border-radius: 20px
 }
 
-a[href]:after {
-	content: " (" attr(href) ")";
+#scrollable {
+	overflow-y: scroll;
+	height: 90%;
+	padding-left: 5px;
 }
 
-abbr[title]:after {
-    content: " (" attr(title) ")";
+a {
+	color: white
 }
 
 h1 {
 	text-align: center;
+	color: white;
 }
 h3 {
 	border-bottom: 1px solid black;
+	color: white;
 }
 p {
 	padding-left: 20px;
+	color: white;
 }
 li {
+	color: white;
 	padding-right: 5px;
 }
-
-@page { size: auto;  margin: 0mm; }
 
 @media(max-width:840px) {
 	h1 {
@@ -90,3 +99,27 @@ li {
         height:70%;
     }
 }
+
+@media print {
+  * {
+    background: transparent !important;
+    color: black !important;
+    filter: none !important;
+    -ms-filter: none !important;
+  }
+  #scrollable {
+    overflow-y: unset;
+  }
+  #q{
+    display: none;
+  }
+  @page { size: auto;  margin: 0mm; }
+  a[href]:after {
+    content: " (" attr(href) ")";
+  }
+
+  abbr[title]:after {
+    content: " (" attr(title) ")";
+  }
+}
+
